# ROS_projects

./: README.md  sprawozdanie1.md  sprawozdanie2.md
manipulation/: CMakeLists.txt  package.xml  stero-przydatne  typescript
manipulation/data/gazebo/worlds/: costam.world  costam_octomap.bt  moj_wspanialy_ocotomap_2.bt  moj_wspanialy_ocotomap_3.bt  moj_wspanialy_sloik.bt  moj_wspanialy_swiat.world  mojwspanialamapa.bt  (+3 more)
manipulation/launch/: p2_velma_system_offline.launch  p2_velma_system_online.launch  velma_system.launch  velma_system2.launch  velma_system_online.launch  wspaniala_welma.launch
manipulation/octomap/: moj_wspanialy_octomap.bt  p2_octomap.bt
manipulation/rviz/: moj_wspanialy_rviz.rviz
manipulation/scripts/: cart_imp.py  init_wspaniala_velma.py  inverse_kinematics.py  jar_attached.py  moj_wspanialy_wezel.py  move_grip.py  move_hand.py  p2_wezel.py  p2_wspanialy_wezel.py  two_tables_one_jar.py  world_scan.py
mobile/: CMakeLists.txt
mobile/docs/lab3/: particleCloudPoPublikacjiPunktupng
mobile/launch/: tiago_simple_korytarz.launch  tiago_simple_lab3.launch  tiago_simple_swiat1.launch  tiago_simple_swiat3.launch
mobile/param/: local_costmap_conf.yaml
mobile/rviz/: not_simple.rviz  simple.rviz
mobile/scans/: mapa_swiatv3.yaml  scan_korytarz.yaml  scan_swiat_v1.yaml
mobile/scripts/: error_calc.py  odometry_node.py  sq_publisher.py
mobile/src/: stero_planer.cpp
mobile/worlds/: korytarz.world  swiat_v1.world  swiat_v3.world
mobile/worlds/model_v1/: model.config  model.sdf
mobile/worlds/model_v2/: model.config  model.sdf
